--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Telegram Mini App Boilerplate - React + Vite</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+     window.Telegram?.WebApp.ready();
+    </script>
   </head>
   <body>
     <div id="root"></div>
